--- a/WindowsPerformanceViewer/WindowsPerformanceViewer.csproj
+++ b/WindowsPerformanceViewer/WindowsPerformanceViewer.csproj
@@ -49,12 +49,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\WindowsPerformanceReview\DiagnosticsUtils.cs">
-      <Link>DiagnosticsUtils.cs</Link>
+    <Compile Include="BootDataModel.cs" />
+    <Compile Include="BootTimesPlotForm.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="..\WindowsPerformanceReview\Utils.cs">
-      <Link>Utils.cs</Link>
+    <Compile Include="BootTimesPlotForm.Designer.cs">
+      <DependentUpon>BootTimesPlotForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataSetInfo.cs" />
+    <Compile Include="DiagnosticsUtils.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +72,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="BootTimesPlotForm.resx">
+      <DependentUpon>BootTimesPlotForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -95,6 +102,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WindowsPerformanceReview\WindowsPerformanceReview.csproj">
