Added menu items for getting all the 100, 200, 300, 400, and 500 events in dialog boxes.  Converted the overview to use Rich Text, which can be edited in Open Office or the like.
git-svn-id: http://svn.kenevans.net/VisualStudio/trunk@141 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/WindowsPerformanceViewer/WindowsPerformanceViewer.csproj
+++ b/WindowsPerformanceViewer/WindowsPerformanceViewer.csproj
@@ -113,6 +113,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Overview.rtf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -129,9 +130,6 @@
       <Project>{A3D42B99-CDF5-4B20-8E2F-9C801B3700BA}</Project>
       <Name>WindowsPerformanceReview</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Overview.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
