--- a/WindowsPerformanceViewer/WindowsPerformanceViewer.csproj
+++ b/WindowsPerformanceViewer/WindowsPerformanceViewer.csproj
@@ -121,6 +121,7 @@
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="App.manifest" />
+    <None Include="LICENSE" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
